# memebridge-ai-hub

./: .env.local  README.md  WHITEPAPER.html  WHITEPAPER.md  package-lock.json  package.json  tailwind.config.cjs
smart-contracts/: README.md
smart-contracts/programs/axiom-bridge-escrow/src/: lib.rs
smart-contracts/programs/axiom-bridge-orchestrator/: Anchor.toml  Cargo.toml
smart-contracts/programs/axiom-bridge-orchestrator/src/: lib.rs
smart-contracts/programs/axiom-bridge-vault/src/: lib.rs
smart-contracts/programs/axiom-fee-calculator/src/: lib.rs
smart-contracts/programs/axiom-governance/: Anchor.toml  Cargo.toml
smart-contracts/programs/axiom-governance/src/: lib.rs
smart-contracts/programs/axiom-security-validator/src/: lib.rs
src/: App.tsx  index.css
src/components/ai/: AIAnalysisDashboard.tsx
src/components/bridge/: BridgeInterface.tsx  BridgeInterface.tsx.backup  BridgeInterface_enhanced.tsx
src/components/hype/: HypeRetentionModule.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/trust/: TrustScoreSystem.tsx
src/components/vaults/: RevivalVaults.tsx
src/protocols/: ai.ts  bridge.ts  hype.ts  index.ts  manager.ts  trust.ts  vaults.ts
