[package]
name = "axiom-bridge-orchestrator"
version = "0.1.0"
description = "Axiom Bridge Orchestrator - Main bridge coordination and integration contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axiom_bridge_orchestrator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"