[package]
name = "axiom-governance"
version = "0.1.0"
description = "Axiom Bridge Governance - Multi-signature control system for bridge parameters"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axiom_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"